RESOLVED FIXED200677
REGRESSION (r248533): JSC Command - Need to initializeMainThread() before processing config file
https://bugs.webkit.org/show_bug.cgi?id=200677
Summary REGRESSION (r248533): JSC Command - Need to initializeMainThread() before pro...
Michael Saboff
Reported 2019-08-13 11:08:33 PDT
With the threading assertions added in r248533, we need to initialize threading before we process the optional config file since the config file code uses ref counted CString's and CStringBuffer's.
Attachments
Patch (1.62 KB, patch)
2019-08-13 11:16 PDT, Michael Saboff
no flags
Michael Saboff
Comment 1 2019-08-13 11:16:11 PDT
Mark Lam
Comment 2 2019-08-13 11:18:03 PDT
Comment on attachment 376183 [details] Patch r=me
Chris Dumez
Comment 3 2019-08-13 12:01:32 PDT
*** Bug 200678 has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 4 2019-08-13 12:35:07 PDT
Comment on attachment 376183 [details] Patch Clearing flags on attachment: 376183 Committed r248605: <https://trac.webkit.org/changeset/248605>
WebKit Commit Bot
Comment 5 2019-08-13 12:35:08 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2019-08-13 12:36:16 PDT
Note You need to log in before you can comment on or make changes to this bug.