REGRESSION (r248533): JSC Command - Need to initializeMainThread() before processing config file https://bugs.webkit.org/show_bug.cgi?id=200677

Reviewed by Mark Lam.

We need to initialize the main thread before calling processConfigFile() since it uses RefCounted objects
which have "is main thread" ASSERTS.

* jsc.cpp:
(jscmain):


Canonical link: https://commits.webkit.org/214424@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248605 268f45cc-cd09-0410-ab3c-d52691b4dbfc